- Update help pages.

--- a/MacHgHelp/pgs/AboutTheBrowserView.html
+++ b/MacHgHelp/pgs/AboutTheBrowserView.html
@@ -106,6 +106,8 @@
 
    <p class="linkinternal"><a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">View the files in a Repository</a></p>
 
+   <p class="linkinternal"><a href="help:anchor=QuickLook bookID=MacHg Help">QuickLook in MacHg</a></p>
+
    <p class="linkinternal"><a href="help:anchor=AboutTheHistoryView bookID=MacHg Help">View the history of a Repository</a></p>
 
    <p class="linkinternal"><a href="help:anchor=PullingChanges bookID=MacHg Help">Pull changes from other Repositories into your Repository</a></p>
