--- a/MacHgHelp/pgs/AboutTheDifferencesView.html
+++ b/MacHgHelp/pgs/AboutTheDifferencesView.html
@@ -57,6 +57,8 @@
    <p class="linkinternal"><a href="help:anchor=AboutTheHistoryView bookID=MacHg Help">View the history of a Repository</a></p>
 
    <p class="linkinternal"><a href="help:anchor=AboutMacHgDocuments bookID=MacHg Help">About MacHg Documents</a></p>
+
+   <p class="linkinternal"><a href="help:anchor=QuickLook bookID=MacHg Help">QuickLook in MacHg</a></p>
 </div>
 </body>
 </html>
