--- a/MacHgHelp/pgs/AboutTheHistoryView.html
+++ b/MacHgHelp/pgs/AboutTheHistoryView.html
@@ -61,6 +61,8 @@
    <p class="linkinternal"><a href="help:anchor=PushingChanges bookID=MacHg Help">Push changes in your Repository to other Repositories</a></p>
 
    <p class="linkinternal"><a href="help:anchor=EditingRepositoryHistory bookID=MacHg Help">Editing the history of a Repository</a></p>
+
+   <p class="linkinternal"><a href="help:anchor=QuickLook bookID=MacHg Help">QuickLook in MacHg</a></p>
 </div>
 </body>
 </html>
