--- a/MacHgHelp/pgs/EditingRepositoryHistory.html
+++ b/MacHgHelp/pgs/EditingRepositoryHistory.html
@@ -46,10 +46,9 @@
 <div id="important-spacer">
 
    <div class="important">
-      <p> <span class="important-prefix">Important:</span>In general, you should be an experienced user of Mercurial and MacHg before editing
-         a repository history. It is <em>strongly </em>recommended you clone your repository before performing any history altering operations. Some of the underlying Mercurial
-         commands to edit the history are in fact external commands not written by the core Mercurial team, and not officially part of the Mercurial distribution. Also, be aware
-         that if you have previously pushed a repository before altering its history, you must then somehow arrange to have the histories of all other instances of the repository correspondingly altered.</p>
+      <p> <span class="important-prefix">Important:</span>In general, you should be at least a semi-experienced user of Mercurial and MacHg before editing
+         a repository history. It is recommended that you clone your repository before performing history altering operations, while you are learning about these editing operations. Also, be aware
+         that if you have previously pushed a repository to a centrally accessible server before altering its history, you must then somehow arrange to have the histories of all other instances of the repository which have been pulled by others, correspondingly altered.</p>
    </div>
 </div>
 
