--- a/MacHgHelp/pgs/Shortcuts.html
+++ b/MacHgHelp/pgs/Shortcuts.html
@@ -39,10 +39,6 @@
    </div>
 </div>
 
-<h2> Menu Shortcuts</h2>
-
-<p>Holding down the option key while selecting the Action menu will change many of the items which normally apply to just selected files to instead apply to the whole repository. Eg., the menu item &quot;Commit Selected Files...&quot; will become &quot;Commit All Files...&quot;</p>
-
 <h2>Dialog Shortcuts</h2>
 
 <p>In many of the dialogs if you hold down the command key (⌘), the buttons in the dialog will display an equivalent command key you can use from the keyboard instead of clicking the button with your mouse.</p>
@@ -58,6 +54,10 @@
       <p class="listparagraph">In the right hand table is the list of previous commit messages. Double clicking on a previous message will insert the text of this message at the current insertion point in the commit message.</p>
    </li>
 </ul>
+
+<h2>Quicklook Shortcut</h2>
+
+<p>Quicklook is supported in <a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">The Browser View</a>, <a href="help:anchor=AboutTheHistoryView bookID=MacHg Help">The History View</a>, and <a href="help:anchor=AboutTheDifferencesView bookID=MacHg Help">The Differences View</a>. The shortcut to display the quicklook preview of the selected items is the standard OSX shortcut of the space bar. 
 
 <h2>Contextual Menus</h2>
 
