--- a/MacHgHelp/pgs/xall.html
+++ b/MacHgHelp/pgs/xall.html
@@ -50,7 +50,7 @@ window.scrollBy(0,-60);
 <span class="alphaletters">N</span>
 <span class="alphaletters"><a href="javascript:go('#O');">O</a></span>
 <span class="alphaletters"><a href="javascript:go('#P');">P</a></span>
-<span class="alphaletters">Q</span>
+<span class="alphaletters"><a href="javascript:go('#Q');">Q</a></span>
 <span class="alphaletters"><a href="javascript:go('#R');">R</a></span>
 <span class="alphaletters"><a href="javascript:go('#S');">S</a></span>
 <span class="alphaletters">T</span>
@@ -291,6 +291,10 @@ window.scrollBy(0,-60);
 
 
 <div class ="letterhead"><a name="Q"></a>Q</div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=QuickLook bookID=MacHg Help">QuickLook</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=QuickStart bookID=MacHg Help">QuickStart</a>
