- Add David Keegan to the credits.

--- a/MacHgHelp/Credits.html
+++ b/MacHgHelp/Credits.html
@@ -53,6 +53,7 @@
 <h3>Graphic Design Contributors:</h3>
 <ul>
 	<li>Rick Wong</li>
+	<li>David Keegan</li>
 </ul>
 
 <h3>Documentation Proofreaders:</h3>
