--- a/MacHgHelp/pgs/Shortcuts.html
+++ b/MacHgHelp/pgs/Shortcuts.html
@@ -43,6 +43,17 @@
 
 <p>In many of the dialogs if you hold down the command key (⌘), the buttons in the dialog will display an equivalent command key you can use from the keyboard instead of clicking the button with your mouse.</p>
 
+<h2>History View Shortcuts</h2>
+
+<ul id="taskauxlistbulletedplain">
+   <li>
+      <p class="listparagraph">Double clicking a changeset will display the differences of all the files that changed in that changeset.</p>
+   </li>
+   <li>
+      <p class="listparagraph">Selecting a range of changesets and then switching to the <a href="help:anchor=AboutTheDifferencesView bookID=MacHg Help">The Differences View</a>, will preselect the base and the compare revisions in the Differences View.</p>
+   </li>
+</ul>
+
 <h2>Commit Shortcuts</h2>
 
 <p>Near the bottom of the commit dialog box there are two tables. You can interact with each of these tables as follows:</p>
