- Sebastian Krysmanski has submitted quite a few reports so add him as a tester.  Thanks   Sebastian!

--- a/MacHgHelp/Credits.html
+++ b/MacHgHelp/Credits.html
@@ -48,6 +48,7 @@
 <ul>
 	<li>Marko Käning</li>
 	<li>Josh Soref</li>
+	<li>Sebastian Krysmanski</li>
 </ul>
 
 <h3>Graphic Design Contributors:</h3>
