- Update the help with the pages AboutTheCommandLine and about AboutServerIdentitySecurity

--- a/MacHgHelp/pgs/AboutSecurityAndPasswords.html
+++ b/MacHgHelp/pgs/AboutSecurityAndPasswords.html
@@ -66,7 +66,7 @@ When communicating with a server normally a password is required for access to m
                   <p class="listparagraph">Storing the server password in the SystemKeychain</p>
                </li>
                <li>
-                  <p class="listparagraph"> Including the server password directly in the "Server URL",ie having a Server URL of the form: ssh://user:password@someserver/path/to/repo</p>
+                  <p class="listparagraph"> Including the server password directly in the "Server URL", ie having a Server URL of the form: ssh://user:password@someserver/path/to/repo</p>
                </li>
             </ul>
          </li>
@@ -107,6 +107,8 @@ Thus, really, the storage of passwords in cleartext in a MacHg document has abou
    <h3>Related Topics</h3>
 
    <p class="linkinternal"><a href="help:anchor=AddingServerRepository bookID=MacHg Help">Adding a Server Repository</a></p>
+
+   <p class="linkinternal"><a href="help:anchor=AboutServerIdentitySecurity bookID=MacHg Help">About Server Identity Security</a></p>
 
 </div>
 
