--- a/MacHgHelp/pgs/AddingServerRepository.html
+++ b/MacHgHelp/pgs/AddingServerRepository.html
@@ -93,6 +93,8 @@
 
    <p class="linkinternal"><a href="help:anchor=AboutSecurityAndPasswords bookID=MacHg Help">About Security And Passwords</a></p>
 
+   <p class="linkinternal"><a href="help:anchor=AboutServerIdentitySecurity bookID=MacHg Help">About Server Identity Security</a></p>
+
 </div>
 
 
