--- a/MacHgHelp/pgs/Shortcuts.html
+++ b/MacHgHelp/pgs/Shortcuts.html
@@ -92,6 +92,13 @@
 <p>You can use drag and drop in:</p>
 <ul id="taskauxlistbulletedplain">
    <li>
+      <p class="listparagraph"><a href="help:anchor=AboutTheBrowserView bookID=MacHg Help">The Browser View</a> to drag files or folders onto the finder to create copies of these items, or drag these files or folders onto applications (in the dock or in the OSX Finder) to open the files or folders in that application.</p>
+   </li>
+   <li>
+   <li>
+      <p class="listparagraph"><a href="help:anchor=AboutTheDifferencesView bookID=MacHg Help">The Differences View</a> to drag files or folders as of a specific revision onto the finder to create copies of these items as of the specific revision, or drag these files or folders onto applications (in the dock or in the finder) to open the files or folders as of the specific revision in that application.</p>
+   </li>
+   <li>
       <p class="listparagraph"><a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">The Repository List (<a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">sidebar</a>)</a> to drag repositories in from the OSX Finder.</p>
    </li>
       <li>
