--- a/MacHgHelp/pgs/xall.html
+++ b/MacHgHelp/pgs/xall.html
@@ -146,6 +146,10 @@ window.scrollBy(0,-60);
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=AboutCommandLine bookID=MacHg Help">Command Line</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=ActionMenu_CommitAllFiles bookID=MacHg Help">Commit All Files (menu item)</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
@@ -356,6 +360,10 @@ window.scrollBy(0,-60);
 
 <div class="indexitem"><div class="indexentrytext"> 
 <a href="help:anchor=AboutSecurityAndPasswords bookID=MacHg Help">Security And Passwords</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=AboutServerIdentitySecurity bookID=MacHg Help">Server Identity Security</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
