- Fix about the command line link.

--- a/MacHgHelp/pgs/AddingServerRepository.html
+++ b/MacHgHelp/pgs/AddingServerRepository.html
@@ -70,7 +70,7 @@
             <p>In the dialog that appears, enter a short name of your choosing to help you identify the external repository. This short name will be used in the left <a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">sidebar</a> and in other places to refer to this external repository.</p>
          </li>
          <li>
-            <p>Once you have entered a shortname and Server URL the connection will be automatically tested. You can however click the small button labeled 'test' to test the connection to the server in the terminal. This is sometimes useful to diagnose problems.</p>
+            <p>Once you have entered a shortname and Server URL the connection will be automatically tested. You can however click the small button labeled 'test' to test the connection to the server in the <a href="help:anchor=AboutTheCommandLine bookID=MacHg Help">terminal</a>. This is sometimes useful to diagnose problems.</p>
          </li>
       </ol>
    </div>
@@ -95,6 +95,8 @@
 
    <p class="linkinternal"><a href="help:anchor=AboutServerIdentitySecurity bookID=MacHg Help">About Server Identity Security</a></p>
 
+   <p class="linkinternal"><a href="help:anchor=AboutTheCommandLine bookID=MacHg Help">About The Command Line</a></p>
+   
 </div>
 
 
