--- a/MacHgHelp/pgs/xall.html
+++ b/MacHgHelp/pgs/xall.html
@@ -146,7 +146,7 @@ window.scrollBy(0,-60);
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
-<a href="help:anchor=AboutCommandLine bookID=MacHg Help">Command Line</a>
+<a href="help:anchor=AboutTheCommandLine bookID=MacHg Help">Command Line</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 <div class="indexitem"><div class="indexentrytext"> 
