- Update help page a little.

--- a/MacHgHelp/pgs/AddingServerRepository.html
+++ b/MacHgHelp/pgs/AddingServerRepository.html
@@ -62,12 +62,18 @@
                   <p class="listparagraph"> http://selenic.com/repo/hello</p>
                </li>
                <li>
+                  <p class="listparagraph"> https://user@somehost/somefolder/</p>
+               </li>
+               <li>
                   <p class="listparagraph"> https://user:pass@somehost/somefolder/</p>
                </li>
             </ul>
          </li>
          <li>
             <p>In the dialog that appears, enter a short name of your choosing to help you identify the external repository. This short name will be used in the left <a href="help:anchor=AboutRepositoryLists bookID=MacHg Help">sidebar</a> and in other places to refer to this external repository.</p>
+         </li>
+         <li>
+            <p>If your server requires a password then your can either store the password directly in the &quot;Server URL&quot; field, or you can use the system keychain to store the password by checking the "Use Password" checkbox and entering the password in the field which becomes visible titled "Password". (For more details see: <a href="help:anchor=AboutSecurityAndPasswords bookID=MacHg Help">About Security And Passwords</a>) </p>
          </li>
          <li>
             <p>Once you have entered a shortname and Server URL the connection will be automatically tested. You can however click the small button labeled 'test' to test the connection to the server in the <a href="help:anchor=AboutTheCommandLine bookID=MacHg Help">terminal</a>. This is sometimes useful to diagnose problems.</p>
