- Update the MacHg help pages.

--- a/MacHgHelp/MacHgHelp.html
+++ b/MacHgHelp/MacHgHelp.html
@@ -37,7 +37,7 @@
    <div id="leftcolumn">
       <div class="leftcolpadding">
          <p class="subheadleft"><a href="help:anchor=AboutMacHg bookID=MacHg Help">About MacHg</a></p>
-         <p class="leftcolumntext">The status of MacHg, how MacHg came to be, and what is planned in the future.</p>
+         <p class="leftcolumntext">An overview of the capabilities of MacHg and future plans.</p>
          <p class="subheadleft"><a href="http://hgbook.red-bean.com/read/how-did-we-get-here.html">About Mercurial and Revision Control</a></p>
          <p class="leftcolumntext">An overview of revision control and mercurial.</p>
          <p class="subheadleft"><a href="help:anchor=AboutMacHgDocuments bookID=MacHg Help">Structure of a MacHg Document</a></p>
