--- a/MacHgHelp/pgs/xall.html
+++ b/MacHgHelp/pgs/xall.html
@@ -56,7 +56,7 @@ window.scrollBy(0,-60);
 <span class="alphaletters">T</span>
 <span class="alphaletters"><a href="javascript:go('#U');">U</a></span>
 <span class="alphaletters">V</span>
-<span class="alphaletters">W</span>
+<span class="alphaletters"><a href="javascript:go('#W');">W</a></span>
 <span class="alphaletters">X</span>
 <span class="alphaletters">Y</span>
 <span class="alphaletters">Z</span>
@@ -395,6 +395,13 @@ window.scrollBy(0,-60);
 <a href="help:anchor=UsingExternalMercurialVersion bookID=MacHg Help">Using an External Mercurial Version</a>
 </div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
+
+
+<div class ="letterhead"><a name="W"></a>W</div>
+
+<div class="indexitem"><div class="indexentrytext"> 
+<a href="help:anchor=WorkingWithBranches bookID=MacHg Help">Working With Branches</a>
+</div><div class="seealsotext"><span class="seealsoprefix"></div></div>
 
 
 
